storage/xtradb/os/os0file.cc
@@ -2629,15 +2629,22 @@ os_file_set_size(
 		} while (err == EINTR
 			 && srv_shutdown_state == SRV_SHUTDOWN_NONE);
 
-		if (err) {
+		switch (err) {
+		case 0:
+			return true;
+		default:
 			ib_logf(IB_LOG_LEVEL_ERROR,
 				"preallocating " INT64PF " bytes for"
 				"file %s failed with error %d",
 				size, name, err);
+			/* fall through */
+		case EINTR:
+			errno = err;
+			return false;
+		case EINVAL:
+			/* fall back to the code below */
+			break;
 		}
-		/* Set errno because posix_fallocate() does not do it.*/
-		errno = err;
-		return(!err);
 	}
 # endif
 
@@ -2679,11 +2686,12 @@ os_file_set_size(
 		}
 
 		current_size += n_bytes;
-	} while (current_size < size);
+	} while (current_size < size
+		 && srv_shutdown_state == SRV_SHUTDOWN_NONE);
 
 	free(buf2);
 
-	return(ret && os_file_flush(file));
+	return(ret && current_size >= size && os_file_flush(file));
 #endif
 }
 
